# learn-agentic-ai

./: .gitignore  README.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/: README.md  pyproject.toml
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/: README.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/architecture/: audit-trail.md  persistence-boundary.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/comparisons/: artifact-3-vs-artifact-4.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/demos/: durable-audit-demo.md  restart-replay-demo.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/specs/: artifact-4-durable-side-effect-ledger.md
03-agent-factory/xx-projects/03-durable-side-effect-ledger/docs/status/: interview-notes.md  known-limitations.md  project-status.md  (+1 more)
03-agent-factory/xx-projects/03-durable-side-effect-ledger/tests/: restart_replay_helpers.py  test_api_skill_runs.py  test_durable_audit_store.py  test_durable_side_effect_ledger.py  test_github_comment_skill.py  test_github_issue_comment_client.py  test_policy_guard.py  test_restart_replay_approval_guards.py  test_restart_replay_determinism.py  test_restart_replay_integration.py  test_restart_replay_status_guards.py
03-agent-factory/xx-projects/identity-aware-agent-harness/: .env.example  .gitignore  README.md  pyproject.toml
03-agent-factory/xx-projects/identity-aware-agent-harness/docs/: api.md  architecture.md  audit-trail.md  identity-resolution.md  local-graph-harness.md  policy-guard.md  project-status.md  public-safety.md  roadmap.md  sprint-2-spec.md  sprint-3-spec.md  sprint-4-spec.md  sprint-5-spec.md  sprint-6-spec.md  tool-registry.md
03-agent-factory/xx-projects/identity-aware-agent-harness/tests/: test_api_rate_limiting.py  test_api_tools.py  test_audit_logger.py  test_graph_allowed_path.py  test_graph_approval_pause.py  test_graph_audit.py  test_graph_denied_path.py  test_graph_service.py
(+537 files in other folders)
