[project]
name = "approval-gated-github-tool-harness"
version = "0.1.0"
description = "Artifact 3 baseline copy for an approval-gated GitHub tool harness."
readme = "README.md"
authors = [
    { name = "Harry5174", email = "harisjaved010@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx2>=2.3.0",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
app = "app.api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
